--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -28,4 +28,8 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Test with Maven
-        run: mvn test
+        run: mvn test jacoco:report
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
