--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Test with Maven
-        run: mvn test jacoco:report coveralls:report
+        run: mvn clean test jacoco:report coveralls:report -D jacoco=true -DrepoToken={{ env.COVERALLS_REPO_TOKEN }}
